# robot_course

./: .gitignore  PROJECT_STRUCTURE.md
catkin_ws/src/: embodied_robot_demo从零构建教程.md
catkin_ws/src/embodied_robot_demo/: CMakeLists.txt  package.xml
catkin_ws/src/embodied_robot_demo/config/: controllers.yaml  display.rviz
catkin_ws/src/embodied_robot_demo/launch/: display.launch  gazebo_demo.launch  multimodal_demo.launch
catkin_ws/src/embodied_robot_demo/scripts/: robot_control_api.py  task_orchestrator.py  vision_node.py  voice_node.py
catkin_ws/src/embodied_robot_demo/urdf/: embodied_robot.urdf.xacro
catkin_ws/src/embodied_robot_demo/worlds/: simple_room.world
collaboration/: README.md
collaboration/handoff_template/: CHANGELOG.md  VERSION.txt  commands.txt  environment.txt  test-results.md
docs/: 三人并行分工执行手册.md  具身机器人课程结课作业执行手册.md
docs/team_inputs/person_A/: .~过程.wps  ~$详细过程文档.docx  过程.wps
isaacgym_demo/: import_robot.py
isaacgym_demo/assets/: embodied_robot.urdf
